@@ -4,6 +4,7 @@ MineSharp 0.1.4:
  - Load registry of the server
  - Parse chat message type from registry
  - added WaitForTick() method to physics plugin
+ - added AutoRespawn Plugin (not enabled by default)
 
 MineSharp 0.1.3:
  - handle SpawnLivingEntity packet
